Body can no longer overflow

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,7 @@ $menu-frame-bg: #437286;
 
 body {
     margin: 0px;
+    overflow: hidden;
 }
 
 @mixin menu-border {
